--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "description": "工资税后收入计算器 - 一个可以精确到分的税后收入计算器",
+  "description": "工资个税计算器 - 一个可以精确到分的税后收入计算器",
   "keywords": [
     "工资计算器",
     "税后工资",
@@ -23,26 +23,37 @@
     "url": "https://github.com/ikiwihome/income-calc/issues"
   },
   "scripts": {
-    "tauri:build": "pnpm tauri build",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "tauri:build": "pnpm tauri build"
   },
   "dependencies": {
-    "nuxt": "^3.17.3",
-    "typescript": "^5.6.3",
-    "vue": "^3.5.14",
-    "vue-router": "^4.5.1"
+    "@tanstack/vue-table": "^8.21.3",
+    "@vueuse/core": "^13.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.511.0",
+    "nuxt": "^3.17.4",
+    "reka-ui": "^2.2.1",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.7",
+    "tw-animate-css": "^1.3.0",
+    "vue": "^3.5.14"
   },
-  "packageManager": "pnpm@9.15.2+sha512.93e57b0126f0df74ce6bff29680394c0ba54ec47246b9cf321f0121d8d9bb03f750a705f24edc3c1180853afd7c2c3b94196d0a3d53d3e069d9e2793ef11f321",
   "devDependencies": {
-    "@nuxtjs/robots": "^4.0.0",
-    "@nuxtjs/sitemap": "^5.0.0",
-    "@tauri-apps/cli": "^2.5.0",
-    "@types/node": "^22.15.19",
-    "@vue/runtime-core": "^3.5.14",
-    "vite": "^6.3.5"
-  }
+    "@iconify-json/radix-icons": "^1.2.2",
+    "@iconify/vue": "^5.0.0",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@tauri-apps/cli": "2.5.0",
+    "@tailwindcss/vite": "^4.1.7",
+    "@tanstack/vue-table": "^8.21.3",
+    "class-variance-authority": "^0.7.1",
+    "shadcn-nuxt": "2.1.0",
+    "vue-router": "^4.5.1",
+    "typescript": "^5.8.3"
+  },
+  "packageManager": "pnpm@10.11.0"
 }
