--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "income-calc",
+  "title": "工资个税计算器",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -25,6 +26,7 @@
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
+    "build": "nuxt build",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
@@ -32,28 +34,28 @@
   },
   "dependencies": {
     "@tanstack/vue-table": "^8.21.3",
-    "@vueuse/core": "^13.9.0",
+    "@vueuse/core": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "lucide-vue-next": "^0.546.0",
-    "nuxt": "^4.1.3",
-    "reka-ui": "^2.6.0",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.15",
+    "lucide-vue-next": "^0.556.0",
+    "nuxt": "^4.2.1",
+    "reka-ui": "^2.6.1",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
-    "vue": "^3.5.22"
+    "vue": "^3.5.25"
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.2.5",
     "@iconify/vue": "^5.0.0",
-    "@nuxtjs/color-mode": "^3.5.2",
-    "@tailwindcss/vite": "^4.1.15",
+    "@nuxtjs/color-mode": "^4.0.0",
+    "@tailwindcss/vite": "^4.1.17",
     "@tanstack/vue-table": "^8.21.3",
-    "@tauri-apps/cli": "2.9.0",
+    "@tauri-apps/cli": "2.9.5",
     "class-variance-authority": "^0.7.1",
-    "shadcn-nuxt": "2.3.2",
+    "shadcn-nuxt": "2.4.2",
     "typescript": "^5.9.3",
     "vue-router": "^4.6.3"
   },
-  "packageManager": "pnpm@10.11.0"
+  "packageManager": "pnpm@10.24.0"
 }
